[package]
name = "solana_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.5.0"
serde = "1.0.200"
serde_json = "1.0.116"
solana-client = "1.18.12"
solana-sdk = "1.18"
tokio = "1.37.0"

# DOES NOT work with ethers, for whatever reason.
#ethers = { version = "2.0.14", default-features = false, features = ["std"] }
#solana-sdk = { version = "1.18.12", default-features = false }

#[patch.crates-io]
#zeroize = { version = "=1.3.0" }